--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,10 +12,15 @@
 
 #headshotAlina {
   position: relative;
-  width: 100px;
-  height: 100px;
+  width: 200px;
+  height: 200px;
   object-fit: cover;
-  border-radius: 50px;
+  border-radius: 100px;
   float: right;
-  margin-right: 10px;
+  margin-right: 20 px;
+}
+
+img.medium {
+  width: 286px;
+  height: 180px;
 }
